--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=inventorySpringBoot
 
 
 # MySQL configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/inventorySpring?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/inventorydata?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -24,7 +24,7 @@ spring.jpa.hibernate.ddl-auto=update
 
 
 #Server Configuration
-server.port: 8090
+server.port: 8080
 
 
 
