--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=inventorySpringBoot
 
 
 # MySQL configuration
-spring.datasource.url=jdbc:mysql://localhost:3307/inventorydata?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/inventorydata?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -36,11 +36,15 @@ spring.mvc.view.suffix:.jsp
 
 
 #Configure file upload temporary Location
-spring.servlet.multipart.location= /tmp/uploads
-file.path = G:/Spring/Don't Delete/image/
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=100MB
+file.path= src/main/resources/static/images/
+
+#file.path = G:/Spring/7th/image
+
+#spring.servlet.multipart.location=/src/main/resources/static
 spring.servlet.multipart.enabled=true
-spring.servlet.multipart.max-file-size=10MB
-spring.servlet.multipart.max-request-size=10MB
+
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.properties.hibernate.id.new_generator_mappings=true
